Starting to add content and layout

--- a/detail.html
+++ b/detail.html
@@ -11,21 +11,24 @@
 
 	<script src="./js/jquery-1.6.4.min.js"></script>
 </head>
-
 <body>
 	<div id="header">
 		<h1 id="logo"><span>SwitchToScala</span></h1>
 		<ul class="nav">
-			<li><a class="selected" href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Technology</a></li>
-			<li><a href="#">Contact</a></li>
+		<li><a href="./index.html">Home</a></li>
+			<li><a class="selected" href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
+			<li><a href="./how_we_work.html">How We Work</a></li>
+			<li><a href="./pricing.html">Pricing</a></li>
+			<li><a href="./about_us.html">About Us</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 
 	<div id="upper" class="content">
 		<div class="item full">
-			<h2>Test</h2>
+			<h2>			
+We can show you how to get more from your Java developerment team - we can help you switch to <b>Scala</b>
+			</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
@@ -43,14 +46,14 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
 	</div>
-
 	<div id="footer">
-
 		<ul class="nav">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Technology</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="./index.html">Home</a></li>
+			<li><a href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
+			<li><a href="./how_we_work.html">How We Work</a></li>
+			<li><a href="./pricing.html">Pricing</a></li>
+			<li><a href="./about_us.html">About Us</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 </body>
