--- a/index.html
+++ b/index.html
@@ -26,18 +26,30 @@
 	<div id="header">
 		<h1 id="logo"><span>SwitchToScala</span></h1>
 		<ul class="nav">
-			<li><a class="selected" href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Technology</a></li>
-			<li><a href="#">Contact</a></li>
+		<li><a class="selected" href="./index.html">Home</a></li>
+			<li><a href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
+			<li><a href="./how_we_work.html">How We Work</a></li>
+			<li><a href="./pricing.html">Pricing</a></li>
+			<li><a href="./about_us.html">About Us</a></li>
+			<li><a href="./contact.html">Contact</a></li>
+
 		</ul>
 	</div>
 
 	<div id="upper" class="content">
 		<div class="item">
-			<h2>Test</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h2>We can get show you how to get more from your Java developerment team by switching to Scala</h2>
+			<p><b>LESS CODE => LESS BUGS => LESS TIME => LESS COST</b></p> 
+			<p>At SwitchToScala we mentor our clients in how to adpot Scala in their business to reduce costs and gain a competative advantage. 
+			<br>We support our clients' existing in-house Java development teams while the adopt scala into projects such as:
+			<ul>
+				<li>	Application Development </li>
+				<li>	Mobile Development </li>
+				<li>	High Performance Distrbuted Computing </li>
+				<li>	Domain Specific Language Creation </li>
+				<li>	NOSQL Adoption </li>
+			
+				<p>With our experience of Scala tools, libraries and development techniques, we can help guarentee successful Scala adoption into your company.</p>
 		</div>
 		<div id="slides">
 			<ul>
@@ -58,25 +70,33 @@
 	</div>
 
 	<div id="lower" class="content">
-		<p class="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		<div class="item">
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1> Why Scala?</h1>
+			<p>"Why should my developers learn and use a new technology? We already have a language that works.."</p>
+			<p>We were Java engineers, we love Java, but we adopted Scala to deliver applications sooner and at less cost.</p>
+		
 		</div>
 		<div class="item">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h1> How to Adopt Scala</h1>
+			<p>An experianced Java Developer can writing Scala within one day.</p>
+			<p>We have been working solely in Scala since 2009, and we can help you learn from our experiances. We can help with the process to upskill your existing team members, and advise on how to tackle you first projects.</p>
+		</div>
+		<div class="item">
+			<h1> Scala Code and Ecosystem </h1>
+			<p>Sometimes code speaks louder than words.</p>
+			<p>If you develop in Java then you will feel immediatly at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the sameand your runtime environment are also the same.</p>
 		</div>
 	</div>
 
 	<div id="footer">
 
 		<ul class="nav">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Technology</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="./index.html">Home</a></li>
+			<li><a href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
+			<li><a href="./how_we_work.html">How We Work</a></li>
+			<li><a href="./pricing.html">Pricing</a></li>
+			<li><a href="./about_us.html">About Us</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 </body>
