--- a/why_adopt_scala.html
+++ b/why_adopt_scala.html
@@ -27,13 +27,36 @@
 	<div id="upper" class="content">
 		<div class="item full">
 		
-			<p><i>"Why should my developers learn and use a new technology? We have a language that works. They all know it, and we're delivering on that platform. Why waste time and money having them learn a new language?"</i></p>
-			<p>By switching to Scala, your developers can deliver your application sooner and at less cost.
-			Concise languages like Scala allow programmers to focus on the core logic, leaving out the boilerplate. Less code makes the intent of the programmer more obvious, and the resulting code is easier to understand. Clearer, cleaner code is easier to debug, and makes it easier to avoid errors in the first place.</p>
+<p><i>"Why should my developers learn and use a new technology? We have a language that works. They all know it, and we're delivering on that platform. Why waste time and money having them learn a new language?"</i></p>
+<p>By switching to Scala, your developers can deliver your application sooner and at less cost.
+Concise languages like Scala allow programmers to focus on the core logic, leaving out the boilerplate. Less code makes the intent of the programmer more obvious, and the resulting code is easier to understand. Clearer, cleaner code is easier to debug, and makes it easier to avoid errors in the first place.</p>
 
-			<p>Combining Scala and Scala's modern testing tools, like ScalaTest, provides more clarity around what the program does, reducing the likelihood for discovering problems in production. The language runs on a familiar platform (the Java Virtual Machine), much like the cars of today run on our highway system.</p>
+<p>Combining Scala and Scala's modern testing tools, like ScalaTest, provides more clarity around what the program does, reducing the likelihood for discovering problems in production. The language runs on a familiar platform (the Java Virtual Machine), much like the cars of today run on our highway system.</p>
 
-			<p>If you're worried about your existing investment in Java, don't. Scala and Java can co-exist. You can call your existing Java libraries from Scala, and the new Scala that you write can call the new code that you're going to write in Scala.</p>
+<p>If you're worried about your existing investment in Java, don't. Scala and Java can co-exist. You can call your existing Java libraries from Scala, and the new Scala that you write can call the new code that you're going to write in Scala.</p>
+      
+<h1> About Scala </h1>
+  <p>Scala is a multi-paradigm programming language designed to integrate features of object-oriented programming and functional programming. The name Scala stands for ”scalable language”, signifying that it is designed to grow with the demands of its users.</p>
+  <p> Scala can be thought of as a clean room re-implementation and modernizing of the Java syntax. This effort was performed by Martin Ordesky who also wrote the Javac Java Compiler. Scala has been designed to reduce time-consuming verbosity of Java by implementing a smart compiler that requires less instructions to achieve the same outcome.</p>
+
+  <p>Scala incorporates and unifies the best features from many previous languages:</p>
+  <ul>
+    <li>Scala runs on the Java Virtual Machine, which means code gets compiled to Java Byte Code, which is interpreted and/or compiled dynamically - exactly like Java.</li>
+
+    <li>Both Scala and Java are object-oreiented, however Scala is also functional, with fluid boundaries between the two development paradigms.</li>
+
+    <li>Scala has full interoperability from and to Java. This also includes full interoperability with Java's libraries and frameworks (J2EE, servlets, JMS etc)</li>
+
+    <li>Scala is fast, in benchmarks performed buy Google Inc outperforming equivelent Java code</li>
+
+
+  <p> For a Java developer when comparing Scala against a different modern development platform like Python or Ruby on Rails. With Scala there is much less cluture shock:
+  <ul>
+    <li>You can use the same libraries and IDE</li>
+    <li>The way you package jars and wars is the same </li>
+    <li>Scala's runtime environment and runtime characteristics are the same </li>
+
+    <p>So an experianced Java developer can learn to write Java-style code in Scala in a day, then overtime learn to utilize features from Scala's powerful language features not present in Java.</p>
 		</div>
 	</div>
 
