added text to how we work

--- a/how_we_work.html
+++ b/how_we_work.html
@@ -27,11 +27,16 @@
 	<div id="upper" class="content">
 		<div class="item full">
 			<h2>			
-We can show you how to get more from your Java developerment team - we can help you switch to <b>Scala</b>
-			</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
+      Our goal is to rapidly upskill your existing team, and support their growth as Scala Developers not to replace them.
+      </h2>
+      <p> An experianced Java developer will almost immeditaly be able to write code that looks like Java in Scala, but to achieve savings, your developers will need to start thinking in Scala. This is where our experianced consultants come in.</p>
+
+      <p>One of the first things you'll notice about us is that instead of lecturing we pair program. This means that two developers sit down together at one computer, and write code for your first Scala projects together. Our preference is to sit in the same room together but if this is not an option, we can also offer remote assistance.  Working via a collaborative real-time editor, shared desktop, or a remote pair programming IDE plugin.</p>
+
+      <p>For companies that have already adopted Scala and want to take there developers skills to the next level, we also offer onsite or remote code-reviews, where we periodically review a developers progress on a project, help fix issues and highlight improvements.</p>
+
+      <p>We can also provide more traditional assistance like: technical project management, formal developer training and tecnical testing.</p>
+    </div>
 	</div>
 
 	<div id="lower" class="content">
