updates and tweaks to index page

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 	<div id="upper" class="content">
 		<div class="item">
-			<h2>We can get show you how to get more from your Java developerment team by switching to Scala</h2>
+			<h2>We can show you how to get more from your Java developerment team by switching to Scala</h2>
 			<p><b>LESS CODE => LESS BUGS => LESS TIME => LESS COST</b></p> 
-			<p>At SwitchToScala we mentor our clients in how to adpot Scala in their business to reduce costs and gain a competative advantage. 
+			<p>We mentor our clients in how to adpot Scala in their business to reduce costs and gain a competative advantage. 
 			<br>We support our clients' existing in-house Java development teams while the adopt scala into projects such as:
 			<ul>
 				<li>	Application Development </li>
@@ -54,15 +54,15 @@
 		<div id="slides">
 			<ul>
 				<li class="slide">
-					<div class="img-wrapper">1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+					<div class="img-wrapper">1 Google compares the performance of Java, Scala, Go, C++ click here to read the results </div>
 				</li>
 
 				<li class="slide">
-					<div class="img-wrapper">2 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+					<div class="img-wrapper">2 Twitter moved their main message queue from Ruby to Scala for improved performance </div>
 				</li>
 
 				<li class="slide">
-					<div class="img-wrapper">3 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+					<div class="img-wrapper">3 The Guardian newspaper describes the success they had moving from Java to Scala </div>
 				</li>
 			</ul>
 			<div id="pager"></div>
@@ -73,12 +73,12 @@
 		<div class="item">
 			<h1> Why Scala?</h1>
 			<p>"Why should my developers learn and use a new technology? We already have a language that works.."</p>
-			<p>We were Java engineers, we love Java, but we adopted Scala to deliver applications sooner and at less cost.</p>
+			<p>We were Java engineers, but we adopted Scala to deliver applications sooner and at less cost. Scala code on averiage is about 3 times shorter than the equivalent Java one, without lossing any performance or scalability.</p>
 		
 		</div>
 		<div class="item">
 			<h1> How to Adopt Scala</h1>
-			<p>An experianced Java Developer can writing Scala within one day.</p>
+			<p>An experianced Java Developer can begin writing Java-like Scala within one day. </p>
 			<p>We have been working solely in Scala since 2009, and we can help you learn from our experiances. We can help with the process to upskill your existing team members, and advise on how to tackle you first projects.</p>
 		</div>
 		<div class="item">
