rough implementation of header for review

--- a/why_adopt_scala.html
+++ b/why_adopt_scala.html
@@ -15,12 +15,18 @@
 	<div id="header">
 		<h1 id="logo"><span>SwitchToScala</span></h1>
 		<ul class="nav">
-		<li><a href="./index.html">Home</a></li>
+			<li><a href="./index.html">Home</a></li>
 			<li><a class="selected" href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
 			<li><a href="./how_we_work.html">How We Work</a></li>
 			<li><a href="./pricing.html">Pricing</a></li>
 			<li><a href="./about_us.html">About Us</a></li>
 			<li><a href="./contact.html">Contact</a></li>
+		</ul>
+
+		<ul class="nav sub">
+			<li><a href="#">Sub Link</a></li>
+			<li><a class="selected" href="#">Sub Link Two</a></li>
+			<li><a href="#">Sub Link Three</a></li>
 		</ul>
 	</div>
 
