catherine spell check

--- a/how_we_work.html
+++ b/how_we_work.html
@@ -29,13 +29,13 @@
 			<h2>			
       Our goal is to rapidly upskill your existing team, and support their growth as Scala Developers not to replace them.
       </h2>
-      <p> An experianced Java developer will almost immeditaly be able to write code that looks like Java in Scala, but to achieve savings, your developers will need to start thinking in Scala. This is where our experianced consultants come in.</p>
+      <p> An experienced Java developer will be almost immediately able to write code that looks like Java in Scala, but to achieve savings, your developers will need to start thinking in Scala. This is where our experienced consultants come in.</p>
 
       <p>One of the first things you'll notice about us is that instead of lecturing we pair program. This means that two developers sit down together at one computer, and write code for your first Scala projects together. Our preference is to sit in the same room together but if this is not an option, we can also offer remote assistance.  Working via a collaborative real-time editor, shared desktop, or a remote pair programming IDE plugin.</p>
 
       <p>For companies that have already adopted Scala and want to take there developers skills to the next level, we also offer onsite or remote code-reviews, where we periodically review a developers progress on a project, help fix issues and highlight improvements.</p>
 
-      <p>We can also provide more traditional assistance like: technical project management, formal developer training and tecnical testing.</p>
+      <p>We can also provide more traditional assistance such as technical project management, formal developer training and technical testing.</p>
     </div>
 	</div>
 
