--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	<div id="upper" class="content">
 		<div class="item">
 			<h2>We can show you how to get more from your Java developerment team by switching to Scala</h2>
-			<p><b>LESS CODE => LESS BUGS => LESS TIME => LESS COST</b></p> 
-			<p>We mentor our clients in how to adpot Scala in their business to reduce costs and gain a competative advantage. 
-			<br>We support our clients' existing in-house Java development teams while the adopt scala into projects such as:
+			<p><b>LESS CODE => FEWER BUGS => LESS TIME => LOWER COST</b></p> 
+			<p>We mentor our clients in how to adpot Scala in their business to reduce costs and gain a competitive advantage. 
+			<br>We support our clients' existing in-house Java development teams while they adopt Scala in projects such as:
 			<ul>
 				<li>Application Development </li>
 				<li>Mobile Development </li>
@@ -49,7 +49,7 @@
 				<li>Domain Specific Language Creation </li>
 				<li>NOSQL Adoption </li>
 			</ul>
-			<p>With our experience of Scala tools, libraries and development techniques, we can help guarentee successful Scala adoption into your company.</p>
+			<p>With our experience of Scala tools, libraries and development techniques, we can help your company successfull adopt Scala.</p>
 		</div>
 		<div id="slides">
 			<ul>
@@ -73,18 +73,18 @@
 		<div class="item">
 			<h1> Why Scala?</h1>
 			<p>"Why should my developers learn and use a new technology? We already have a language that works.."</p>
-			<p>We were Java engineers, but we adopted Scala to deliver applications sooner and at less cost. Scala code on averiage is about 3 times shorter than the equivalent Java one, without lossing any performance or scalability.</p>
+			<p>We were Java engineers, but we adopted Scala to deliver applications more quickly and at lower cost. Scala code on average is about 3 times shorter than the equivalent Java, without losing performance or scalability.</p>
 		
 		</div>
 		<div class="item">
 			<h1> How to Adopt Scala</h1>
-			<p>An experianced Java Developer can begin writing Java-like Scala within one day. </p>
-			<p>We have been working solely in Scala since 2009, and we can help you learn from our experiances. We can help with the process to upskill your existing team members, and advise on how to tackle you first projects.</p>
+			<p>An experienced Java Developer can begin writing Java-like Scala within one day. </p>
+			<p>We have been working solely in Scala since 2009, and we can help you learn from our experience. We can help with the process to upskill your existing team members, and advise on how to tackle your first projects.</p>
 		</div>
 		<div class="item">
 			<h1> Scala Code and Ecosystem </h1>
 			<p>Sometimes code speaks louder than words.</p>
-			<p>If you develop in Java then you will feel immediatly at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the sameand your runtime environment are also the same.</p>
+			<p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
 		</div>
 	</div>
 
