added new pages and a few tweaks

--- a/enterprise_adoption.html
+++ b/enterprise_adoption.html
@@ -24,9 +24,9 @@
 		</ul>
 
 		<ul class="nav sub">
-		    <li><a class="selected" href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
+		    <li><a href="./why_adopt_scala.html">Why Adopt Scala?</a></li>
 			<li><a href="./examples.html">Examples</a></li>
-			<li><a href="./enterprise_adoption.html">Enterprise Adoption</a></li>
+			<li><a class="selected" href="./enterprise_adoption.html">Enterprise Adoption</a></li>
 		</ul>
 	</div>
 
