--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<div class="item">
 			<h2>We can show you how to get more from your Java developerment team by switching to Scala</h2>
 			<p><b>LESS CODE => FEWER BUGS => LESS TIME => LOWER COST</b></p> 
-			<p>We mentor our clients in how to adpot Scala in their business to reduce costs and gain a competitive advantage. 
-			<br>We support our clients' existing in-house Java development teams while they adopt Scala in projects such as:
+			<p>Our team mentors companies in how to adpot Scala into their business to reduce costs and gain a competitive advantage. 
+			<br>We support and upskill our clients' existing in-house Java development teams while they adopt Scala in projects such as:
 			<ul>
 				<li>Application Development </li>
 				<li>Mobile Development </li>
@@ -54,15 +54,7 @@
 		<div id="slides">
 			<ul>
 				<li class="slide">
-					<div class="img-wrapper">1 Google compares the performance of Java, Scala, Go, C++ click here to read the results </div>
-				</li>
-
-				<li class="slide">
-					<div class="img-wrapper">2 Twitter moved their main message queue from Ruby to Scala for improved performance </div>
-				</li>
-
-				<li class="slide">
-					<div class="img-wrapper">3 The Guardian newspaper describes the success they had moving from Java to Scala </div>
+					<div class="img-wrapper"> Read about how and why high profile companies like Twitter and the Guardian newspaper are switching to Scala.</div>
 				</li>
 			</ul>
 			<div id="pager"></div>
@@ -79,12 +71,12 @@
 		<div class="item">
 			<h1> How to Adopt Scala</h1>
 			<p>An experienced Java Developer can begin writing Java-like Scala within one day. </p>
-			<p>We have been working solely in Scala since 2009, and we can help you learn from our experience. We can help with the process to upskill your existing team members, and advise on how to tackle your first projects.</p>
+<p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
 		</div>
 		<div class="item">
-			<h1> Scala Code and Ecosystem </h1>
-			<p>Sometimes code speaks louder than words.</p>
-			<p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
+			<h1> Read Google's Reviw of Scala </h1>
+			<p>Google compares the performance of Java, Scala, Go, C++ in this free whitepaper.</p>
+			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
 		</div>
 	</div>
 
