--- a/examples.html
+++ b/examples.html
@@ -32,36 +32,96 @@
 
 	<div id="upper" class="content">
 		<div class="item full">
-<p><i>"Why should my developers learn and use a new technology? We have a language that works. They all know it, and we're delivering on that platform. Why waste time and money having them learn a new language?"</i></p>
-<p>By switching to Scala, your developers can deliver your application sooner and at lower cost.
-Concise languages like Scala allow programmers to focus on the core logic, leaving out the boilerplate. Less code makes the intent of the programmer more obvious, and the resulting code is easier to understand. Clearer, cleaner code is easier to debug, and makes it easier to avoid errors in the first place.</p>
+<h2>Functional Programming why?</h2>
+<p>The beauty of Scala is you don't have to use functional programming all the time. You can choose to just use it in situations where it's advantageous. You will find that as you get more familiar with Scala you'll use more functional programming techniques as the code tends to be clearer and shorter than the equivalent non-functional code.</p>
+<p>For instance Quicksort in Java:</p>
 
-<p>Combining Scala and Scala's modern testing tools, like ScalaTest, provides more clarity around what the program does, reducing the likelihood for discovering problems in production. The language runs on a familiar platform (the Java Virtual Machine), much like the cars of today run on our highway system.</p>
+public void quicksort(int array[]) {
+quicksort(array, 0, array.length - 1);              
+}
 
-<p>If you're worried about your existing investment in Java, don't. Scala and Java can co-exist. You can call your existing Java libraries from Scala, and the old Java code can call the new code that you're going to write in Scala.</p>
-      
-<h2> About Scala </h2>
-  <p>Scala is a multi-paradigm programming language designed to integrate features of object-oriented programming and functional programming. The name Scala stands for ”scalable language”, signifying that it is designed to grow with the demands of its users.</p>
-  <p> Scala can be thought of as a clean room re-implementation and modernizing of the Java syntax. This effort was performed by Martin Odersky who also wrote the Javac Java Compiler. Scala has been designed to reduce time-consuming verbosity of Java by implementing a smart compiler that requires fewer instructions to achieve the same output.</p>
+public void quicksort(int array[], int start, int end){
+        int i = start;                          
+        int k = end;                            
 
-  <p>Scala incorporates and unifies the best features from many previous languages:</p>
-  <ul>
-    <li>Scala runs on the Java Virtual Machine, which means code is compiled to Java Byte Code, which is interpreted and/or compiled dynamically - exactly like Java.</li>
+        if (end - start >= 1){
+                int pivot = array[start];       
+                while (k > i){
+                        while (array[i] <= pivot && i <= end && k > i) i++;                                    
+                        while (array[k] > pivot && k >= start && k >= i) k--;                                        
+                        if (k > i) swap(array, i, k);                      
+                }
+                swap(array, start, k);                        
+                quickSort(array, start, k - 1); 
+                quickSort(array, k + 1, end);   
+        }else{
+                return;                     
+        }
+}
 
-    <li>Both Scala and Java are object-oriented, however Scala is also functional, with fluid boundaries between the two development paradigms.</li>
+public void swap(int array[], int index1, int index2) {
+int temp = array[index1];           
+array[index1] = array[index2];      
+array[index2] = temp;               
+}
 
-    <li>Scala has full interoperability from and to Java. This also includes full interoperability with Java's libraries and frameworks (J2EE, servlets, JMS etc)</li>
+<p>and now in Scala:</p>
 
-    <li>Scala is fast, in benchmarks performed by Google Inc. outperforming equivelent Java code</li>
-   </ul>
+    def quicksort(a:Array[Int]): Array[Int] =
+        if (a.length < 2) a
 
-  <p> For a Java developer when comparing Scala against a different modern development platform like Python or Ruby on Rails there is much less cluture shock:
-  <ul>
-    <li>You can use the same libraries and IDE</li>
-    <li>The way you package jars and wars is the same </li>
-    <li>Scala's runtime environment and runtime characteristics are the same </li>
-   </ul>
-    <p>So an experienced Java developer can learn to write Java-style code in Scala in a day, then over time learn to utilize features from Scala's powerful language features not present in Java.</p>
+        else {
+            val pivot = a(a.length / 2)
+            sort (a filter (pivot > _)) ++ (a filter (pivot == _)) ++ sort (a filter(pivot < _))
+        }
+
+<p>The Scala version is shorter, more readable, and much closer to how you'd describe the process in words, vs. the Java which is much more about the mechanics of doing it.</p>
+
+<h2>Syntax</h2>
+<p>Scala is much, much more terse than Java. At first glance, a Java developer can be a bit bewildered, as they're used to having so much laid out for them. When you start writing Scala you'll probably want to stick to what you know and keep doing that (with the few, minor changes such as the order you declare things changed) - and Scala is perfectly happy for you to do that. Within a matter of days you'll find that you get used to not having to do all that extra typing, and actually feel weighed down by it when you switch back to Java code.</p>
+<p>So here is the same quick sort example written in Scala but using Java like syntax that Java Developer learning Scala might write.
+
+def quickSort(array:Array[Int]):Unit ={
+	quickSort(array, 0, array.length - 1);
+}
+
+
+def quickSort(array:Array[Int], start:Int, end:Int):Unit = {
+        var i:Int = start;
+        var k:Int = end;
+
+        if (end - start >= 1){
+                val pivot = array(start);
+                while (k > i){
+                        while (array(i) <= pivot && i <= end && k > i) i += 1;
+                        while (array(k) > pivot && k >= start && k >= i) k -= 1;
+                        if (k > i) swap(array, i, k);
+                }
+                swap(array, start, k);
+                quickSort(array, start, k - 1);
+                quickSort(array, k + 1, end);
+        }else{
+                return;
+        }
+}
+
+def swap(array:Array[Int], index1:Int, index2:Int):Unit = {
+	var temp:Int = array(index1);
+	array(index1) = array(index2);
+	array(index2) = temp;
+}
+
+<h2>Examples and tutorials</h2>
+<p>Java tutorials, textbooks, and forums are 10 a penny. Scala has fewer resources, but they are of a very high quality, the community is strong and enthusiastic, and unlike in Java you're likely to be able to get answers to any tricky questions directly from those implementing the language itself.</p>
+<p>Stack Overflow is very active <a href="http://stackoverflow.com/tags/scala/info">Stack Overflow's Scala Tutorial</a></p>
+<p>Twitter has opened sourced Scala training material <a href="http://twitter.github.com/scala_school/">Twitter's Scala School</a></p>
+
+<h2>IDE/tool support</h2>
+<p>IntelliJ and Eclipse both have widely used Scala plugins, as do more unusual environments such as VIM and Emacs. You can keep using many of your supporting Java tools - Java Application servers, dependency management all work with Scala, plus you have new options such as the REPL for interactive Scala sessions (which can run in the context of your project) and external compilation daemons which accelerate experimentation, development and learning in ways that are all but impossible with Java.</p>
+<p><a href="http://blog.jetbrains.com/scala/">Stack Overflow's Scala Tutorial</a></p>
+<p><a href="http://www.scala-ide.org/">Stack Overflow's Scala Tutorial</a></p>
+<p><a href="http://aemon.com/file_dump/ensime_manual.html#tth_sEc1.1">Scala Interaction Mode for Emacs and VIM</a></p>
+
 		</div>
 	</div>
 
