--- a/about_us.html
+++ b/about_us.html
@@ -26,12 +26,24 @@
 
 	<div id="upper" class="content">
 		<div class="item full">
-			<h2>			
-We can show you how to get more from your Java developerment team - we can help you switch to <b>Scala</b>
-			</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
+			<h2>About Us</h2>
+			<p> After working for sucessfull startup's in the online betting and gaming sector, we spent six months reaserching, playing and creating with cutting edge languages, frameworks and open source projects.</p>
+			<p> Our aim was to see which technologies were being used to tackle the real-world issues we had experianced.</p>
+			<p> Scala shone out for us, in a number of different ways:</p>
+			<ul>
+			<li> Transitioning from Java to Scala was painless
+			<li> The leading Scala open source projects are designed for and ready to be used in an Enterprise environment
+			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from alot of other solutions, for too many of which spent alot of time in core developer mailing lists - tackling basic scalability issues.
+			</ul>
+			<p> From this point onwards (2009) our team have worked 100% exclusively in Scala building bespoke applications for offshore gaming operators and developing our own gaming platform in Scala.</p>
+			<p> We belive that Scala and Scala open source projects will in time be adopted by most large Java development teams.</p>
+			<p> We want to help Scala's growth by ensuring that companies first steps in Scala are sucessfull.</p>
+			
+			<h2> Join us at the Scala Lift Off</h2>
+			<p> We are delighted to have been invited to speak at the Scala Lift Off - on October 13th @ Skills Matter in London.
+			<h2>How to build a real-time sports-betting platform in six months with a team of three</h2>
+			<p>Starting with two developers, zero Lift experience and only basic Scala the InPlayTime sports-betting platform was stable in production four months from project instigation, and feature complete two months later. We'll present our approach, the challenges we faced, and the things that turned out to be so much easier than expected when developing in Scala with Lift</p>
+			</div>
 	</div>
 
 	<div id="lower" class="content">
