--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
 		</div>
 		<div class="item">
-			<h1> Read Google's Reviw of Scala </h1>
+			<h1> Read Google's Review of Scala </h1>
 			<p>Google compares the performance of Java, Scala, Go, C++ in this free whitepaper.</p>
 			<p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
 		</div>
