--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 				<li class="slide">
 					<div class="img-wrapper"> Read about how and why high profile companies like Twitter and the Guardian newspaper are switching to Scala.</div>
 				</li>
+				<li class="slide">
+					<div class="img-wrapper"> SwitchToScala will be presenting at Scala Lift Off @ SkillsMatter in London on October 13th 2011</div>
+				</li>
 			</ul>
 			<div id="pager"></div>
 		</div>
