standarized the layout on the bottom section

--- a/examples.html
+++ b/examples.html
@@ -125,18 +125,25 @@ def swap(array:Array[Int], index1:Int, index2:Int):Unit = {
 		</div>
 	</div>
 
-	<div id="lower" class="content">
-		<p class="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<div class="item">
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		<div class="item">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-	</div>
+        <div id="lower" class="content">
+                <div class="item">
+                        <h1> Why Scala?</h1>
+                        <p>"Why should my developers learn and use a new technology? We already have a language that works.."</p>
+                        <p>We were Java engineers, but we adopted Scala to deliver applications more quickly and at lower cost. Scala code on average is about 3 times shorter than the equivalent Java, without losing performance or scalability.</p>
+                
+                </div>
+                <div class="item">
+                        <h1> How to Adopt Scala</h1>
+                        <p>An experienced Java Developer can begin writing Java-like Scala within one day. </p>
+<p>If you develop in Java then you will feel immediately at home with Scala. You can use the same libraries and IDE, the way you package jars and wars is the same and your runtime environment is also the same.</p>
+                </div>
+                <div class="item">
+                        <h1> Read Google's Review of Scala </h1>
+                        <p>Google compares the performance of Java, Scala, Go, C++ in this free whitepaper.</p>
+                        <p>Scala beats Java on runtime, and it had a smaller code size and a smaller memory footprint. "Scala['s] concise notation and powerful language features allowed for the best optimization of code complexity,".</p>
+                </div>
+        </div>
+~                
 	<div id="footer">
 		<ul class="nav">
 			<li><a href="./index.html">Home</a></li>
