initial version of the enterprise page

--- a/about_us.html
+++ b/about_us.html
@@ -30,9 +30,9 @@
 			<p> Our aim was to see which technologies were being used to tackle the real-world issues we had experianced.</p>
 			<p> Scala shone out for us, in a number of different ways:</p>
 			<ul>
-			<li> Transitioning from Java to Scala was painless
-			<li> The leading Scala open source projects are designed for and ready to be used in an Enterprise environment
-			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from alot of other solutions, for too many of which spent alot of time in core developer mailing lists - tackling basic scalability issues.
+			<li> Transitioning from Java to Scala was painless</li>
+			<li> The leading Scala open source projects are designed for and ready to be used in an Enterprise environment</li>
+			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from alot of other solutions, for too many of which spent alot of time in core developer mailing lists - tackling basic scalability issues.</li>
 			</ul>
 			<p> From this point onwards (2009) our team have worked 100% exclusively in Scala building bespoke applications for offshore gaming operators and developing our own gaming platform in Scala.</p>
 			<p> We belive that Scala and Scala open source projects will in time be adopted by most large Java development teams.</p>
