--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,10 @@
 
 	<div id="upper" class="content">
 		<div class="item full">
-			<h2>			
-We can show you how to get more from your Java developerment team - we can help you switch to <b>Scala</b>
-			</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h2>Contact Us</h2>
+			<p>SwitchToScala is based in Marlow in Buckinghamshire, England</p>
+			<p><a href="mailto:info@switchtoscala.com?subject=SwitchToScala Contact Us Page">info@switchtoscala.com</a></p>
+
 		</div>
 	</div>
 
