fixed aboutus spelling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<li>Domain Specific Language Creation </li>
 				<li>NOSQL Adoption </li>
 			</ul>
-			<p>With our experience of Scala tools, libraries and development techniques, we can help your company successfull adopt Scala.</p>
+			<p>With our experience of Scala tools, libraries and development techniques, we can help your company successfully adopt Scala.</p>
 		</div>
 		<div id="slides">
 			<ul>
