--- a/about_us.html
+++ b/about_us.html
@@ -26,22 +26,22 @@
 	<div id="upper" class="content">
 		<div class="item full">
 			<h2>About Us</h2>
-			<p> After working for sucessfull startup's in the online betting and gaming sector, we spent six months reaserching, playing and creating with cutting edge languages, frameworks and open source projects.</p>
-			<p> Our aim was to see which technologies were being used to tackle the real-world issues we had experianced.</p>
+			<p> After working for successful startups in the online betting and gaming sector, we spent six months researching, playing and creating with cutting edge languages, frameworks and open source projects.</p>
+			<p> Our aim was to see which technologies were being used to tackle the real-world issues we had experienced.</p>
 			<p> Scala shone out for us, in a number of different ways:</p>
 			<ul>
 			<li> Transitioning from Java to Scala was painless</li>
-			<li> The leading Scala open source projects are designed for and ready to be used in an Enterprise environment</li>
-			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from alot of other solutions, for too many of which spent alot of time in core developer mailing lists - tackling basic scalability issues.</li>
+			<li> The leading Scala open source projects are designed for and ready to be used in an enterprise environment</li>
+			<li> Rapid development without sacrificing on performance and scalability. This was something lacking from a lot of other solutions, which had developer mailing lists with many questions about tackling basic scalability issues.</li>
 			</ul>
 			<p> From this point onwards (2009) our team have worked 100% exclusively in Scala building bespoke applications for offshore gaming operators and developing our own gaming platform in Scala.</p>
 			<p> We belive that Scala and Scala open source projects will in time be adopted by most large Java development teams.</p>
-			<p> We want to help Scala's growth by ensuring that companies first steps in Scala are sucessfull.</p>
+			<p> We want to help Scala's growth by ensuring that companies first steps in Scala are sucessful.</p>
 			
 			<h2> Join us at the Scala Lift Off</h2>
 			<p> We are delighted to have been invited to speak at the Scala Lift Off - on October 13th @ Skills Matter in London.
 			<h2>How to build a real-time sports-betting platform in six months with a team of three</h2>
-			<p>Starting with two developers, zero Lift experience and only basic Scala the InPlayTime sports-betting platform was stable in production four months from project instigation, and feature complete two months later. We'll present our approach, the challenges we faced, and the things that turned out to be so much easier than expected when developing in Scala with Lift</p>
+			<p>Starting with two developers with zero Lift experience the InPlayTime sports-betting platform was stable in production four months from project instigation, and feature complete two months later. We'll present our approach, the challenges we faced, and the things that turned out to be so much easier than expected when developing in Scala with Lift</p>
 			</div>
 	</div>
 
